query_interface_backend/service-twitch-logger-query-interface-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: twitch-logger-query-interface-backend-service
spec:
  selector:
    app: twitch-logger-query-interface-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
