query_interface_backend/ingress-route-twitch-logger-query-backend.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: twitch-logger-query-interface-backend-route
  namespace: default
spec:
  entryPoints:
    - web
    # - websecure 
  routes:
    - kind: Rule
      match: Host(`api.looank.com`)
      services:
        - kind: Service
          name: twitch-logger-query-interface-backend-service
          port: 8080
